# BasicsOfProgrammingCourse

./: CMakeLists.txt  main.c  matrix_ex.c  matrix_test.c  vec.c  vecV.c
libs/: CMakeLists.txt
libs/algorithms/: CMakeLists.txt
libs/algorithms/array/: array.c  array.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/bitset/: bitset.c  bitset.h
libs/data_structures/files/: buffer_file.txt  file_lib.c  file_lib.h  files.c  task_3_ref.txt  task_4_ref.txt  task_5.txt  task_6_ref.txt  task_7_ref.txt  tempCodeRunnerFile.c
libs/data_structures/matrix/: matrix.c  matrix.h
libs/data_structures/ordered_set/: ordered_array_set.c  ordered_array_set.h
libs/data_structures/stream/: stream.c  task_10_console.c  task_9_console.c  tempCodeRunnerFile.c  tests.c
libs/data_structures/stream/test_files/: task_2_test_3.txt  task_3_test_2.txt  task_3_test_3.txt
libs/data_structures/string/: string_.c  string_.h  tempCodeRunnerFile.c
libs/data_structures/string/tasks/: str_test.c  str_test_2.c  tempCodeRunnerFile.c
libs/data_structures/unordered_set/: unordered_array_set.c  unordered_array_set.h
libs/data_structures/vector/: vector.c  vector.h  vectorVoid.c  vectorVoid.h
libs/util/: CMakeLists.txt  util.c  util.h
